--- a/index.html
+++ b/index.html
@@ -9,7 +9,54 @@
 </head>
 
 <body>
+    <!-- header start -->
+    <header>
+        <nav>
+            <h3 class="nav-title">G3 Architects</h3>
 
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Log in</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects </h1>
+                <p class="text-light-gray">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
+    </header>
+    <!-- Header end -->
+    <main>
+        <!-- Teams section -->
+        <section class="teams-container">
+            <div class="temas-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"> <span class="quick-list text-light-gray">Quick list</span> <span>of Our</span>
+                    <span class="text-fatures">Features</span> </h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
