--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer" >
+        <p class="footer-description">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
